@@ -1,3 +1,7 @@
+2010-05-02	Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/as.h: add throw(not_compatible) in Rcpp::as	
+
 2010-04-28	Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/Rcpp/Vector.h: changed Vector( size_t ) to Vector( int )
